openshift/base/infrastructure/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airlines-kibana-service
  namespace: airlines-backend-microservices
  labels:
    app: airlines-kibana
spec:
  selector:
    app: airlines-kibana
  ports:
    - name: http
      protocol: TCP
      port: 5601
      targetPort: 5601
